--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ version = "0.1.0"
 clap = "2.30.0"
 env_logger = "0.5.4"
 failure = "0.1.1"
-failure_derive = "0.1.1"
 log = "0.4.1"
-rusoto_core = "0.31.0"
-rusoto_credential = "0.10.0"
-rusoto_route53 = "0.31.0"
+rusoto_core = "0.42.0"
+rusoto_credential = "0.42.0"
+rusoto_route53 = "0.42.0"
 serde = "1.0.27"
 serde_derive = "1.0.27"
 serde_json = "1.0.10"
 
 [dependencies.acme-client]
 default-features = false
-version = "0.5.1"
+git = "https://github.com/janderholm/acme-client.git"
+branch = "master"
