--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-env_logger = "0.9"
-log = "0.4.14"
 rusoto_core = "0.48"
 rusoto_credential = "0.48"
 rusoto_route53 = "0.48"
 serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0"
-acme2-slim = {git ="https://github.com/nickmass/acme2-slim.git", branch = "main"}
-openssl = "0.10.32"
-tokio = {version = "1.6", features = ["fs", "rt", "time"]}
-reqwest = "0.11.1"
-tokio-compat-02 = "0.2.0"
+openssl = "0.10.45"
+tokio = {version = "1.24", features = ["fs", "rt", "time"]}
+reqwest = "0.11.14"
+acme2 = "0.5.1"
+tracing-subscriber = "0.3.16"
+tracing = "0.1.37"
+toml = "0.5.11"
